--- a/src/components/TaskInfo/index.scss
+++ b/src/components/TaskInfo/index.scss
@@ -14,10 +14,10 @@
 				var .pr20;
 			}
 			&:nth-child(2) {
-				var .w200.bc-eaeaea;
+				var .w200.bc-eaeaea.pb30;
 			}
 			&:last-child {
-				var .w110.bc-eaeaea;
+				var .w110.bc-eaeaea.pb30;
 			}
 		}
 	}
