--- a/src/components/TaskInfoForm/index.scss
+++ b/src/components/TaskInfoForm/index.scss
@@ -1,14 +1,14 @@
 ..dialog-box.self {
 	..dialog-content {
 		..form {
-			var .abs.l.r.t.b60.p20-34.ova;
+			var .abs.l.r.t-1.b60.p20-34.ova.bc-f2f2f2;
 
 			..form-field {
 				position: relative;
 				padding-left: 80px;
 
 				textarea {
-					height: 100px;
+					height: 150px;
 					margin-bottom: 10px;
 				}
 				..icon {
