task locked, edit task

--- a/src/components/TaskInfo/index.scss
+++ b/src/components/TaskInfo/index.scss
@@ -14,10 +14,10 @@
 				var .pr20;
 			}
 			&:nth-child(2) {
-				var .w200.bc-eaeaea.pb30;
+				var .w200.bc-f2f2f2.pb30;
 			}
 			&:last-child {
-				var .w110.bc-eaeaea.pb30;
+				var .w110.bc-f2f2f2.pb30;
 			}
 		}
 	}
@@ -58,7 +58,7 @@
 		}
 	}
 	.description {
-		var .fs14.mt5.mb15.lh19;
+		var .fs14.mt5.mb15.lh19.mnh100.bc-f2f2f2.mt12.p10;
 	}
 	.caption {
 		var .mb6.fs13.bc-777.c-eee.br3.p1-5-2-5;
