--- a/src/components/QuickTask/index.scss
+++ b/src/components/QuickTask/index.scss
@@ -49,6 +49,7 @@
 		position: absolute;
 		top: 48px;
 		left: 6px;
+		bottom: 40px;
 	}
 
 	.type-panel {
@@ -170,6 +171,10 @@
 	    cursor: pointer;
 	    border: 1px solid #cecece;
 	    box-sizing: border-box;
+
+	    &.lock-task {
+	    	var .abs.b.l;
+	    }
 
 		&..panel-up {
 			display: none !important;
