--- a/src/components/TaskActions/index.scss
+++ b/src/components/TaskActions/index.scss
@@ -16,6 +16,12 @@
 		}
 	}
 	.tooltip {
-		var .abs.t.r.mr-50.wh40.br50p.bc-fff.cen.box.pt8.pl1;
+		var .abs.t.r.mr-50.wh40.br50p.bc-fff.cen.box.pt6.pl1;
+		..icon {
+			var .fs27.c-555;
+			&:hover {
+				var .c-333;
+			}
+		}
 	}
 }
