--- a/src/ui/Button/index.scss
+++ b/src/ui/Button/index.scss
@@ -13,8 +13,8 @@
 	user-select: none;
 
 	&:hover {
-		background-color: #333;
-		border-color: #333;
+		background-color: #333 !important;
+		border-color: #333 !important;
 	}
 
 	&.white {
