--- a/src/ui/Checkbox/index.scss
+++ b/src/ui/Checkbox/index.scss
@@ -2,15 +2,42 @@
 	cursor: pointer;
 	display: block;
 	padding: 4px 0;
+	padding-left: 30px;
+	position: relative;
 
-	input {
-		float: left;
-		margin-right: 5px;
-		margin-top: 2px;
+	.control {
+		position: absolute;
+		top: 2px;
+		left: 0;
+		display: block;
+		border: 1px solid #ccc;
+		width: 20px;
+		height: 20px;
+		box-sizing: border-box;
+		border-radius: 3px;
+		background-color: #f3f3f3;
+	}
+	&.checked {
+		.control {
+			background-color: #555;
+			border-color: #555;
+			color: #fff;
+		}
 	}
 	&:after {
 		content: '';
 		display: block;
 		clear: left;
+	}
+	&.disabled {
+		cursor: default;
+	}
+	&:not(.disabled):hover {
+		.control {
+			border-color: #888;
+		}
+		.label {
+			color: #000;
+		}
 	}
 }
