--- a/src/components/StartButton/index.scss
+++ b/src/components/StartButton/index.scss
@@ -1,8 +1,21 @@
 .self {
 	var .fix.z10000.b6.l8.c-e1e1e1.pntr;
-	
-	& > div {
+	&.active {
+		.menu {
+			var .bl.trans;
+			& > div {
+				var .bc-555.wh40.mt2.br3;
+				&:hover {
+					var .bc-333;
+				}
+			}
+		}
+	}
+	.main {
 		var .bc-555.br3.box.wh40.ovh;
+		&:hover {
+			var .bc-333;
+		}
 	}
 
 	..icon {
@@ -23,9 +36,6 @@
 	}
 
 	&:hover {
-		.main {
-			var .bc-444;
-		}
 		.menu {
 			var .bl;
 		}
