--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -4,13 +4,13 @@
 		var .cnt.abs.l322.t.b.w1.bc-e9e9e9;
 	}
 	&:after {
-		var .cnt.abs.l640.t.b.w1.bc-e9e9e9;
+		var .cnt.abs.l600.t.b.w1.bc-e9e9e9;
 	}
 	.main-info {
 		var .inb.w220.vtop;
 	}
 	.status {
-		var .p1-5-2-5.br3.bc-848484.c-fff.fs13.mt5.inb;
+		var .p0-4-2-4.br3.bc-848484.c-fff.fs12.mt5.inb;
 		&.status-6,
 		&.status-1 {
 			var .bc-5cc31b;
@@ -21,19 +21,19 @@
 		}
 	}
 	.projects {
-		var .inb.w300.vtop.pl10;
+		var .inb.w260.vtop.pl10;
 		.projects-list {
 			white-space: normal;
 		}
 	}
 	.data {
-		var .abs.r.t.b.w310.bc-f3f3f3.p10.box;
+		var .abs.r.t.b.w350.bc-f3f3f3.p10.box;
 		white-space: normal;
 		.title {
 			var .bc-e4e4e4;
 		}
 		.task {
-			var .lh15.fs13.mxh46.ovh;
+			var .lh15.fs13.mxh46.ovh.w290;
 		}
 	}
 	.title {
@@ -68,6 +68,15 @@
 		}
 		..gray {
 			var .c-a7a98f;
+		}
+	}
+	..actions-button {
+		var .abs.r.t.b.w50.o4;
+		..icon {
+			var .abs.t50p.mt-15.l50p.ml-15;
+		}
+		&:hover {
+			var .o9;
 		}
 	}
 }
