--- a/src/components/Task/index.scss
+++ b/src/components/Task/index.scss
@@ -22,6 +22,9 @@
 	.status {
 		var .fs13.lh17.c-777;
 	}
+	.timeleft {
+		var .fs13.lh18.m3-10.br3.p2-4.bc-aaa.c-fff.inb;
+	}
 	.icons {
 		var .abs.l7.t11;
 		..icon {
@@ -33,6 +36,9 @@
 	}
 	&..status-in_work {
 		var .boc-eae6b4.bc-fffbe5;
+		.timeleft {
+			var .bc-b7b15f;
+		}
 	}
 	&..status-delayed {
 		var .boc-aaa.bc-e8e8e8;
