--- a/src/ui/Dialog/index.scss
+++ b/src/ui/Dialog/index.scss
@@ -48,7 +48,7 @@
 
 		
 	.title {
-		var .rel.bc-555.c-fff.fs18.lh30.p10-20;
+		var .rel.bc-555.c-fff.fs18.lh30.p10-20.box.h50;
 
 		.logo {
 			var .c-999.tshad222-3.bold.it.fs20.inb.mr15;
