--- a/src/components/Task/index.scss
+++ b/src/components/Task/index.scss
@@ -5,12 +5,9 @@
 		var .abs.l96.t7.wh46;
 	}
 	..actions-button {
-		var .abs.r.t.b.w50.o4;
+		var .abs.r.t.b.w50;
 		..icon {
 			var .abs.t50p.mt-15.l50p.ml-15;
-		}
-		&:hover {
-			var .o9;
 		}
 	}
 	.title {
