--- a/src/components/Task/index.scss
+++ b/src/components/Task/index.scss
@@ -29,10 +29,10 @@
 		}
 	}
 	&..status-ready {
-		var .boc-d0eab4.bc-f2ffe5;
+		var .boc-b9d29e.bc-f2ffe5;
 	}
 	&..status-in_work {
-		var .boc-eae6b4.bc-fffbe5;
+		var .boc-d0cc9e.bc-fffbe5;
 		.timeleft {
 			var .bc-b7b15f;
 		}
