--- a/src/components/TaskInfo/index.scss
+++ b/src/components/TaskInfo/index.scss
@@ -122,7 +122,7 @@
 				var .bc-f1b13c;
 			}
 			&.scale-red {
-				var .bc-fd5959;
+				var .bc-e60035;
 			}
 			&.scale-dark {
 				var .bc-b10041;
