--- a/src/components/BoardTask/index.scss
+++ b/src/components/BoardTask/index.scss
@@ -1,12 +1,15 @@
 .self {
 	var .rel.br6.p10.mb8.bo-ddd.pntr;
+	&:last-child {
+		var .mb;
+	}
 	.top {
 		var .mb10.rel.mnh46.box.pt30.pl60;
 	}
 	.title {
 		var .fs16.lh20.p5.rel;
 		.title-inner {
-			var .rel.z2;
+			var .rel.z2.ova.mxh80;
 		}
 		&:before {
 			var .cnt.abs.l-2.t-2.r-2.b-2.bc-000.o1.br3;
@@ -22,7 +25,7 @@
 		}
 	}
 	.icons {
-		var .abs.l65.t;
+		var .abs.l60.t;
 		..icon {
 			var .inb.fs22.c-000.mr8.o8;
 		}
