--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -3,9 +3,6 @@
 	&:before {
 		var .cnt.abs.l322.t.b.w1.bc-e9e9e9;
 	}
-	&:after {
-		var .cnt.abs.l600.t.b.w1.bc-e9e9e9;
-	}
 	.main-info {
 		var .inb.w220.vtop;
 	}
@@ -24,6 +21,13 @@
 		var .inb.w260.vtop.pl10;
 		.projects-list {
 			white-space: normal;
+			var .fs13;
+			.user-project {
+				var .inb.vtop.mr3.p0-6.br3.bo-e1e1e1;
+				&.active {
+					var .boc-a0a0a0.bc-a0a0a0.c-fff;
+				}
+			}
 		}
 	}
 	.data {
@@ -32,8 +36,14 @@
 		.title {
 			var .bc-e4e4e4;
 		}
+		.current-project {
+			var .inb.vtop.ml3.p0-6.br3.bo-a0a0a0.bc-a0a0a0.c-fff.lh15.fs13;
+		}
 		.task {
 			var .lh15.fs13.mxh46.ovh.w290;
+		}
+		&:after {
+			var .cnt.abs.l.t.b.w1.bc-e9e9e9;
 		}
 	}
 	.title {
@@ -53,9 +63,6 @@
 		&:before {
 			var .bc-e8e4cd;
 		}
-		&:after {
-			var .bc-e8e4cd;
-		}
 		var .bc-fffbe5.boc-d2d4b9;
 		.title {
 			var .bc-efeecf;
@@ -64,6 +71,9 @@
 			var .bc-f4f5e1;
 			.title {
 				var .bc-ececce;
+			}
+			&:after {
+				var .bc-e8e4cd;
 			}
 		}
 		..gray {
