--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -3,11 +3,16 @@
 	&:before {
 		var .cnt.abs.l322.t.b.w1.bc-e9e9e9;
 	}
+	&..role-head {
+		&:before {
+			var .none;
+		}
+	}
 	.main-info {
 		var .inb.w220.vtop;
 	}
 	.status {
-		var .p0-4-2-4.br3.bc-848484.c-fff.fs12.mt5.inb;
+		var .p2-4.br3.bc-848484.c-fff.fs12.mt5.inb;
 		&.status-6,
 		&.status-1 {
 			var .bc-5cc31b;
@@ -34,7 +39,7 @@
 		var .abs.r.t.b.w350.bc-f3f3f3.p10.box;
 		white-space: normal;
 		.title {
-			var .bc-e4e4e4;
+			var .bc-dedede;
 		}
 		.current-project {
 			var .inb.vtop.ml3.p0-6.br3.bo-a0a0a0.bc-a0a0a0.c-fff.lh15.fs13;
@@ -51,12 +56,14 @@
 	}
 	.name {
 		white-space: normal;
-		var .fs20.lh12.pb8;
+		var .fs20.lh12.pb8.pt6;
 	}
 	..avatar {
 		var .abs.l5.t5.wh80;
 	}
-	&..role-head,
+	&..role-head {
+		var .bc-e5f4ff.boc-b9c9d4;
+	}
 	&..role-admin,
 	&..role-editor,
 	&..role-analyst {		
@@ -70,7 +77,7 @@
 		.data {
 			var .bc-f4f5e1;
 			.title {
-				var .bc-ececce;
+				var .bc-dedebd;
 			}
 			&:after {
 				var .bc-e8e4cd;
