--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -62,8 +62,9 @@
 		var .abs.l5.t5.wh80;
 	}
 	&..role-head {
-		var .bc-e5f4ff.boc-b9c9d4;
+		var .w50p;
 	}
+	&..role-head,
 	&..role-admin,
 	&..role-editor,
 	&..role-analyst {		
