--- a/src/components/ProjectsList/index.scss
+++ b/src/components/ProjectsList/index.scss
@@ -6,7 +6,7 @@
 	}
 
 	.content {
-		var .abs.z2.bc-fff.p20.br5.mxw600.box.flex.flcen;
+		var .abs.z2.bc-fff.p20.br5.mxw600.box.mnw200.mnh200;
 	}
 
 	..button {
