--- a/src/components/ProjectsList/index.scss
+++ b/src/components/ProjectsList/index.scss
@@ -6,11 +6,11 @@
 	}
 
 	.content {
-		var .abs.z2.bc-fff.p20.br5.mxw600.box.mnw200.mnh200;
+		var .abs.z2.bc-fff.p5.br5;
 	}
 
 	..button {
-		var .m7.mnw100;
+		var .m10.mnw150.bl;
 	}
 
 }
