--- a/src/components/Tasks/index.scss
+++ b/src/components/Tasks/index.scss
@@ -1,8 +1,17 @@
 .self {
 	.content {
-		var .abs.t55.l.r.b15.ova.p0-20;
+		var .abs.t102.l.r.b15.ova.p0-20;
 		&.my {
 			var .t;
+		}
+	}
+	.tabs {
+		var .mt10;
+	}
+	.project-info {
+		var .p0-20;	
+		.project-name {
+		    var .inb.fs14.nowr.c-fff.p0-10.pntr.cen.mnw100.box.lh36.br3;
 		}
 	}
 	.statuses {
