--- a/src/components/WorkStatuses/index.scss
+++ b/src/components/WorkStatuses/index.scss
@@ -6,7 +6,10 @@
 	}
 
 	.content {
-		var .abs.z2.bc-fff.p20.br5.mnh200.mnw200.box.flex.flcen;
+		var .abs.z2.bc-fff.p20.br5.mnh200.mnw200.box;
+	}
+	.inner-content {
+		var .flex.flcen;	
 	}
 	..button {
 		var .bl.w160.mb5.fs15.lh40;
