start button task search by hash

--- a/src/components/BoardTask/index.scss
+++ b/src/components/BoardTask/index.scss
@@ -25,7 +25,7 @@
 		}
 	}
 	.id {
-		var .inb.vtop.fs17.mr15.p0-3.bc-333.c-fff.br3;
+		var .inb.vtop.fs17.mr15.p0-3.bc-333.c-fff.br3.o8;
 	}
 	.icons {
 		var .abs.l60.t;
