--- a/src/components/StartButton/index.scss
+++ b/src/components/StartButton/index.scss
@@ -1,5 +1,5 @@
 .self {
-	var .fix.z10500.b6.l8.c-e1e1e1.pntr.nosel;
+	var .fix.z10500.b6.l8.c-e1e1e1.pntr.nosel.cen.fs28.lh40;
 	&.active {
 		.menu {
 			var .bl.trans;
