--- a/src/components/TaskInfo/index.scss
+++ b/src/components/TaskInfo/index.scss
@@ -29,6 +29,12 @@
 		&..importance-urgent {
 			var .p6-10.br3.bo-d82b3b.bc-ffa3a7.mb12;
 		}
+		.id {
+			var .inb.bold.mr10;
+			span {
+				var .o5;
+			}
+		}
 	}
 	.subtasks {
 		var .mb20.bo-ddd;
