--- a/src/ui/Checkbox/index.scss
+++ b/src/ui/Checkbox/index.scss
@@ -20,7 +20,7 @@
 	&.checked {
 		.control {
 			background-color: #555;
-			border-color: #555;
+			border-color: #555 !important;
 			color: #fff;
 		}
 	}
