--- a/src/components/Team/index.scss
+++ b/src/components/Team/index.scss
@@ -1,3 +1,13 @@
 .self {
 	var .abs.ova.t.l.r.b.p0-20;
+	.no-users {
+		var .abs.l20.r20.t.b.bo-ccc.bc-f4f4f4;
+
+		..icon {
+			var .abs.fs200.l.r.t50p.mt-200.cen.c-d6d6d6;
+		}
+	}
+	.no-users-text {
+		var .abs.t50p.cen.l.r.fs18.c-a9a9a9.mt10;
+	}
 }
