--- a/src/components/Users/index.scss
+++ b/src/components/Users/index.scss
@@ -1,8 +1,8 @@
 .self {
-	.type-filter-tabs {
+	.filter-tabs {
 		var .fr.mr10;
-	}
-	.status-filter-tabs {
-		var .fr.mr20;
+		&:nth-child(1) {
+			var .mr20;
+		}
 	}
 }
