--- a/src/components/Tasks/index.scss
+++ b/src/components/Tasks/index.scss
@@ -15,12 +15,12 @@
 		    var .inb.fs14.vtop.nowr.c-fff.p0-10.pntr.cen.mnw100.box.lh36.br3;
 		}
 		.project-release {
-			var .inb.vtop.ml15.fs13.p2-8.bo-909090.br3.pntr.bc-fff;
+			var .inb.vtop.ml15.fs13.p2-8.bo-909090.br3.pntr.bc-fff.lh15;
 			.project-release-name {
 				var .bold;
 			}
 			.project-release-date {
-				var .c-676767;
+				var .c-676767.lh15;
 			}
 		}
 		.project-stat {
