--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -64,6 +64,13 @@ body {
 }
 
 ..main-box {
+	var .ff-Roboto.c-111.lh17;
+
+	*, *:before, *:after {
+	    -webkit-box-sizing: content-box;
+	    -moz-box-sizing: content-box;
+	    box-sizing: content-box;
+	}
 	*::-webkit-scrollbar {
 	  width: 8px;
 	  height: 8px;
@@ -73,8 +80,6 @@ body {
 	    background: #888; 
 	}
 
-	var .ff-Roboto.c-111;
-
 	button {
 		var .lh26.pntr.ff-Roboto.p3-14;
 	}
@@ -83,7 +88,7 @@ body {
 	input[type="text"],
 	input[type="password"],
 	textarea {
-		var .box.bc-fff.p8-12.bo-aaa.br2.ff-Roboto.tra-boc-3.fs14;
+		var .box.bc-fff.p8-12.bo-aaa.br2.ff-Roboto.tra-boc-3.fs14.lh16;
 		
 		&:focus {
 			var .ol.shad.boc-222!;
@@ -108,6 +113,9 @@ body {
 	}
 	table {
 		var .c-111.fs14;
+	}
+	table, th, td {
+ 	   border: none;
 	}
 }
 
