Work status users

--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -12,7 +12,7 @@
 		var .inb.w220.vtop;
 	}
 	.status {
-		var .p2-4.br3.bc-848484.c-fff.fs12.mt5.inb.pntr;
+		var .p2-4.br3.bc-848484.c-fff.fs12.mt5.inb;
 		&.status-6,
 		&.status-1 {
 			var .bc-5cc31b;
