--- a/src/components/Tasks/index.scss
+++ b/src/components/Tasks/index.scss
@@ -12,7 +12,7 @@
 	.project-info {
 		var .p0-20;	
 		.project-name {
-		    var .inb.fs14.vtop.nowr.c-fff.p0-10.pntr.cen.mnw100.box.lh36.br3;
+		    var .inb.fs14.vtop.nowr.c-fff.p0-10.pntr.cen.mnw100.box.lh36.br3.ell.mxw200;
 		}
 		.project-release {
 			var .inb.vtop.ml15.fs13.p2-8.bo-909090.br3.pntr.bc-fff.lh15;
