--- a/src/ui/Loader/index.scss
+++ b/src/ui/Loader/index.scss
@@ -1,9 +1,11 @@
 .self {
 	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
+	left: 50%;
+	top: 50%;
+	width: 200px;
+	height: 200px;
+	margin-left: -100px;
+	margin-top: -100px;
 	z-index: 10;
 
 	&:before {
@@ -15,7 +17,8 @@
 		bottom: 0;
 		z-index: 1;
 		background-color: #fff;
-		opacity: 0.8;
+		opacity: 0.7;
+		border-radius: 50%;
 	}
 	
 	.container {
