--- a/src/components/Task/index.scss
+++ b/src/components/Task/index.scss
@@ -20,7 +20,7 @@
 		var .fs13.lh17.c-777;
 	}
 	.timeleft {
-		var .fs13.lh18.m3-10.br3.p0-4.bc-aaa.c-fff.inb;
+		var .fs13.lh18.m3-10.br3.p0-4.bc-555.c-fff.inb;
 		&.overdue {
 			var .bc-ce002f!;
 		}
