--- a/src/components/User/index.scss
+++ b/src/components/User/index.scss
@@ -46,6 +46,10 @@
 		}
 		.task {
 			var .lh15.fs13.mxh46.ovh.w290;
+			.task-link {
+				var .pntr;
+				text-decoration: underline #888;
+			}
 		}
 		&:after {
 			var .cnt.abs.l.t.b.w1.bc-e9e9e9;
