--- a/src/ui/Tabs/index.scss
+++ b/src/ui/Tabs/index.scss
@@ -54,11 +54,11 @@
 			var .pl20;
 		}
 		& > .content {
-			var .abs.t55.l.r.b60.ova.box.p0-20;
+			var .abs.t55.l.r.b5.ova.box.p0-20;
 		}
 		&.no-overflow {
 			& > .content {
-				overflow: visible !important;
+				var .ovv!;
 			}
 		}
 	}
