--- a/src/components/UserForm/index.scss
+++ b/src/components/UserForm/index.scss
@@ -1,3 +1,12 @@
-..user-form {
+.self {
 	margin: 0 150px;
+	.submit {
+		var .rt;
+	}
+	..checkboxes {
+		var .bo-aaa.p10.br2;
+	}
+	..button {
+		var .w100.mt15;
+	}	
 }
