--- a/src/ui/Checkbox/index.scss
+++ b/src/ui/Checkbox/index.scss
@@ -1,10 +1,12 @@
 .self {
-	cursor: pointer;
-	display: block;
 	padding: 4px 0;
 	padding-left: 30px;
 	position: relative;
 
+	.label {
+		cursor: pointer;
+	}
+	
 	.control {
 		position: absolute;
 		top: 2px;
