--- a/src/components/UserForm/index.scss
+++ b/src/components/UserForm/index.scss
@@ -1,5 +1,5 @@
 .self {
-	margin: 0 150px;
+	var .pl200.pr100.abs.l.r.t.b;
 	.submit {
 		var .rt;
 	}
@@ -8,5 +8,8 @@
 	}
 	..button {
 		var .w100.mt15;
-	}	
+	}
+	..avatar {
+		var .wh90.abs.l45.t30;
+	}
 }
